add Home page feature

--- a/assets/lang/km.json
+++ b/assets/lang/km.json
@@ -1,11 +1,51 @@
 {
   "hello": "សួស្តី",
-  "login": "ចូលប្រើប្រាស់",
+  "login": "ចូលប្រើ",
   "logout": "ចាកចេញ",
   "username": "ឈ្មោះអ្នកប្រើ",
   "password": "ពាក្យសម្ងាត់",
   "welcome": "សូមស្វាគមន៍មកកាន់កម្មវិធីគ្រប់គ្រងចំណាយ",
   "home": "ទំព័រដើម",
   "settings": "ការកំណត់",
-  "language": "ភាសា"
+  "language": "ភាសា",
+  "welcome_back": "សូមស្វាគមន៍មកវិញ",
+  "login_subtitle": "សូមចូលដើម្បីបន្ត",
+  "enter_username": "បញ្ចូលឈ្មោះអ្នកប្រើ",
+  "enter_password": "បញ្ចូលពាក្យសម្ងាត់",
+  "username_required": "ត្រូវការបញ្ចូលឈ្មោះអ្នកប្រើ",
+  "password_required": "ត្រូវការបញ្ចូលពាក្យសម្ងាត់",
+  "password_too_short": "ពាក្យសម្ងាត់ត្រូវមានយ៉ាងតិច 6 តួអក្សរ",
+  "forgot_password": "ភ្លេចពាក្យសម្ងាត់?",
+  "or": "ឬ",
+  "create_account": "បង្កើតគណនី",
+  "quick_actions": "សកម្មភាពរហ័ស",
+  "recent_transactions": "ប្រតិបត្តិការថ្មីៗ",
+  "statistics": "ស្ថិតិ",
+  "view_all": "មើលទាំងអស់",
+  "add_expense": "បន្ថែមការចំណាយ",
+  "expenses": "ការចំណាយ",
+  "income": "ចំណូល",
+  "add_income": "បន្ថែមចំណូល",
+  "transfer": "ផ្ទេរ",
+  "no_transactions": "គ្មានប្រតិបត្តិការ",
+  "start_tracking_message": "ចាប់ផ្តើមតាមដានការចំណាយរបស់អ្នកដោយបន្ថែមប្រតិបត្តិការទីមួយ",
+  "spending_by_category": "ការចំណាយតាមប្រភេទ",
+  "add_expense": "បន្ថែមការចំណាយ",
+  "amount": "ចំនួនទឹកប្រាក់",
+  "category": "ប្រភេទ",
+  "description": "ការពិពណ៌នា",
+  "enter_description": "បញ្ចូលការពិពណ៌នា",
+  "description_required": "ត្រូវការការពិពណ៌នា",
+  "date_time": "កាលបរិច្ឆេទ និងពេលវេលា",
+  "date": "កាលបរិច្ឆេទ",
+  "time": "ពេលវេលា",
+  "notes_optional": "កំណត់ចំណាំ (ស្រេចចិត្ត)",
+  "add_notes": "បន្ថែមកំណត់ចំណាំ...",
+  "recurring_expense": "ការចំណាយទៀងទាត់",
+  "repeat_monthly": "ធ្វើម្តងទៀតរៀងរាល់ខែ",
+  "cancel": "បោះបង់",
+  "save_expense": "រក្សាទុកការចំណាយ",
+  "please_select_category": "សូមជ្រើសរើសប្រភេទ",
+  "please_enter_amount": "សូមបញ្ចូលចំនួនទឹកប្រាក់",
+  "expense_saved_successfully": "បានរក្សាទុកការចំណាយដោយជោគជ័យ!"
 }
