--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -7,5 +7,46 @@
   "welcome": "Welcome to Expense Tracker",
   "home": "Home",
   "settings": "Settings",
-  "language": "Language"
+  "language": "Language",
+  "welcome_back": "Welcome Back",
+  "login_subtitle": "Sign in to continue",
+  "enter_username": "Enter your username",
+  "enter_password": "Enter your password",
+  "username_required": "Username is required",
+  "password_required": "Password is required",
+  "password_too_short": "Password must be at least 6 characters",
+  "forgot_password": "Forgot Password?",
+  "or": "OR",
+  "create_account": "Create Account",
+  "quick_actions": "Quick Actions",
+  "recent_transactions": "Recent Transactions",
+  "statistics": "Statistics",
+  "view_all": "View All",
+  "add_expense": "Add Expense",
+  "expenses": "Expenses",
+  "income": "Income",
+  "add_income": "Add Income",
+  "transfer": "Transfer",
+  "no_transactions": "No Transactions",
+  "start_tracking_message": "Start tracking your expenses by adding your first transaction",
+  "spending_by_category": "Spending by Category",
+
+  "add_expense": "Add Expense",
+  "amount": "Amount",
+  "category": "Category",
+  "description": "Description",
+  "enter_description": "Enter description",
+  "description_required": "Description is required",
+  "date_time": "Date & Time",
+  "date": "Date",
+  "time": "Time",
+  "notes_optional": "Notes (Optional)",
+  "add_notes": "Add notes...",
+  "recurring_expense": "Recurring Expense",
+  "repeat_monthly": "Repeat this expense monthly",
+  "cancel": "Cancel",
+  "save_expense": "Save Expense",
+  "please_select_category": "Please select a category",
+  "please_enter_amount": "Please enter an amount",
+  "expense_saved_successfully": "Expense saved successfully!"
 }
