--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -48,5 +48,51 @@
   "save_expense": "Save Expense",
   "please_select_category": "Please select a category",
   "please_enter_amount": "Please enter an amount",
-  "expense_saved_successfully": "Expense saved successfully!"
+  "expense_saved_successfully": "Expense saved successfully!",
+
+  "transactions": "Transactions",
+  "search_transactions": "Search transactions...",
+  "loading_transactions": "Loading transactions...",
+  "no_transactions_found": "No Transactions Found",
+  "try_different_filters": "Try adjusting your filters",
+  "clear_filters": "Clear Filters",
+
+  "filters": "Filters",
+  "period": "Period",
+  "all": "All",
+  "today": "Today",
+  "yesterday": "Yesterday",
+  "this_week": "This Week",
+  "this_month": "This Month",
+  "custom": "Custom",
+  "type": "Type",
+  "expense": "Expense",
+  "income": "Income",
+  "sort_by": "Sort By",
+  "date_newest": "Date (Newest First)",
+  "date_oldest": "Date (Oldest First)",
+  "amount_highest": "Amount (Highest First)",
+  "amount_lowest": "Amount (Lowest First)",
+  "apply": "Apply",
+  "clear_all": "Clear All",
+
+  "transaction_detail": "Transaction Detail",
+  "transaction_not_found": "Transaction Not Found",
+  "details": "Details",
+  "notes": "Notes",
+  "share": "Share",
+  "edit": "Edit",
+  "recurring": "Recurring",
+  "monthly": "Monthly",
+
+  "delete_transaction": "Delete Transaction",
+  "delete_confirmation": "Are you sure you want to delete this transaction?",
+  "delete_confirmation_message": "This action cannot be undone.",
+  "transaction_deleted": "Transaction deleted successfully",
+  "transaction_updated": "Transaction updated successfully",
+  "failed_to_load_transactions": "Failed to load transactions",
+  "failed_to_delete": "Failed to delete transaction",
+  "failed_to_update": "Failed to update transaction",
+  "success": "Success",
+  "error": "Error"
 }
