--- a/assets/lang/km.json
+++ b/assets/lang/km.json
@@ -47,5 +47,51 @@
   "save_expense": "រក្សាទុកការចំណាយ",
   "please_select_category": "សូមជ្រើសរើសប្រភេទ",
   "please_enter_amount": "សូមបញ្ចូលចំនួនទឹកប្រាក់",
-  "expense_saved_successfully": "បានរក្សាទុកការចំណាយដោយជោគជ័យ!"
+  "expense_saved_successfully": "បានរក្សាទុកការចំណាយដោយជោគជ័យ!",
+
+  "transactions": "ប្រតិបត្តិការ",
+  "search_transactions": "ស្វែងរកប្រតិបត្តិការ...",
+  "loading_transactions": "កំពុងផ្ទុកប្រតិបត្តិការ...",
+  "no_transactions_found": "រកមិនឃើញប្រតិបត្តិការ",
+  "try_different_filters": "សូមសាកល្បងកែតម្រងរបស់អ្នក",
+  "clear_filters": "សម្អាតតម្រង",
+  
+  "filters": "តម្រង",
+  "period": "រយៈពេល",
+  "all": "ទាំងអស់",
+  "today": "ថ្ងៃនេះ",
+  "yesterday": "ម្សិលមិញ",
+  "this_week": "សប្តាហ៍នេះ",
+  "this_month": "ខែនេះ",
+  "custom": "ផ្ទាល់ខ្លួន",
+  "type": "ប្រភេទ",
+  "expense": "ការចំណាយ",
+  "income": "ចំណូល",
+  "sort_by": "តម្រៀបតាម",
+  "date_newest": "កាលបរិច្ឆេទ (ថ្មីបំផុត)",
+  "date_oldest": "កាលបរិច្ឆេទ (ចាស់បំផុត)",
+  "amount_highest": "ចំនួនទឹកប្រាក់ (ខ្ពស់បំផុត)",
+  "amount_lowest": "ចំនួនទឹកប្រាក់ (ទាបបំផុត)",
+  "apply": "អនុវត្ត",
+  "clear_all": "សម្អាតទាំងអស់",
+
+  "transaction_detail": "ព័ត៌មានលម្អិតប្រតិបត្តិការ",
+  "transaction_not_found": "រកមិនឃើញប្រតិបត្តិការ",
+  "details": "ព័ត៌មានលម្អិត",
+  "notes": "កំណត់ចំណាំ",
+  "share": "ចែករំលែក",
+  "edit": "កែសម្រួល",
+  "recurring": "ទៀងទាត់",
+  "monthly": "ប្រចាំខែ",
+
+  "delete_transaction": "លុបប្រតិបត្តិការ",
+  "delete_confirmation": "តើអ្នកពិតជាចង់លុបប្រតិបត្តិការនេះមែនទេ?",
+  "delete_confirmation_message": "សកម្មភាពនេះមិនអាចត្រឡប់វិញបានទេ។",
+  "transaction_deleted": "បានលុបប្រតិបត្តិការដោយជោគជ័យ",
+  "transaction_updated": "បានធ្វើបច្ចុប្បន្នភាពប្រតិបត្តិការដោយជោគជ័យ",
+  "failed_to_load_transactions": "បរាជ័យក្នុងការផ្ទុកប្រតិបត្តិការ",
+  "failed_to_delete": "បរាជ័យក្នុងការលុបប្រតិបត្តិការ",
+  "failed_to_update": "បរាជ័យក្នុងការធ្វើបច្ចុប្បន្នភាព",
+  "success": "ជោគជ័យ",
+  "error": "កំហុស"
 }
